<resources>
    <string name="app_name">TSR History validation</string>

    <string name="authen_username">ชื่อผู้ใช้</string>
    <string name="authen_password">รหัสผ่าน</string>

    <string name="search_hint">กรุณาใส่ชื่อนามสกุล หรือเลขบัตรประชาชนของลูกค้า</string>

    <string name="dialog_title_warning">คำเตือน</string>
    <string name="dialog_title_error">พบข้อผิดพลาด</string>
    <string name="dialog_title_success">สำเร็จ</string>
    <string name="dialog_text_msg">ไม่สามารถเชื่อมต่อินเตอร์เน็ตได้ \n กรุณาตั้งค่าอินเตอร์เน็ต</string>
    <string name="dialog_text_msg_update">ตรวจพบเวอร์ชั่นใหม่\nกรุณาอัพเดทแอพพลิเคชั่น</string>
    <string name="dialog_button_cancel">ไม่</string>
    <string name="dialog_button_confirm">ตั้งค่า</string>
    <string name="dialog_button_update">อัพเดท</string>
    <string name="dialog_msg_required">กรุณากรอกข้อมูลให้ครบถ้วน</string>
    <string name="dialog_msg_empty_error">กรุณาใส่ข้อมูลให้ถูกต้อง</string>
    <string name="dialog_msg_save_fail">ไม่สามารถบันทึกข้อมูลได้</string>
    <string name="dialog_msg_save_success">บันทึกสำเร็จ</string>
    <string name="dialog_msg_search_fail">ไม่พบข้อมูล</string>
    <string name="dialog_msg_not_installed">เครื่องของคุณไม่ได้ติดตั้ง\nTSR Sale Systems - Direct Sale</string>
    <string name="dialog_msg_permission">กรุณาเลือก "อนุญาต" หรือ Allow\nเพื่อให้แอพฯ สามารถบันทึกการตรวจสอบได้</string>

    <string name="dialog_login_msg">กรุณาเข้าสู่ระบบ \n ผ่านทางแอพพลิเคชั่น TSR Mobile</string>
    <string name="dialog_full_login_msg">เครื่องของคุณไม่ได้ติดตั้ง TSR Mobile\n กรุณาเข้าสู่ระบบด้วยชื่อผู้ใช้และรหัสผ่านเดียวกัน</string>
    <string name="dialog_button_login">เข้าสู่ระบบ</string>
    <string name="dialog_button_login_tsr">เข้าสู่ระบบผ่าน TSR Mobile</string>
    <string name="dialog_title">บันทึกการตรวจสอบข้อมูล</string>

    <string name="text_search">ค้นหาข้อมูล</string>
    <string name="text_name_title">ชื่อ</string>
    <string name="text_idcard_title">เลขบัตรฯ</string>
    <string name="text_product">ผลิตภัณฑ์</string>

    <string name="text_contract_number">สัญญา</string>
    <string name="text_contract_date">วันที่ติดตั้ง</string>
    <string name="text_pay_type">การชำระ</string>
    <string name="text_pay_total_month">จำนวนงวด</string>
    <string name="text_pay_last_month">งวดสุดท้ายที่ชำระ</string>
    <string name="text_last_status">สถานะ</string>
    <string name="text_date_status">ณ วันที่</string>

    <string name="button_save_log">บันทึก</string>
    <string name="button_cancel">กลับหน้าค้นหา</string>
    <string name="button_send">ส่งข้อมูล</string>
    <string name="button_back">กลับ</string>
    <string name="button_send_data">ส่งข้อมูลให้ปฏิบัติการตรวจสอบ</string>

    <string name="list_total">รวม</string>
    <string name="test_list">รายการ</string>
    <string name="price_amount">จำนวนเงิน</string>
    <string name="sale">ผู้ขาย</string>

    <string name="load_fail">ไม่พบข้อมูลที่ค้นหา\nกรุณาลองใหม่อีกครั้ง</string>
    <string name="try_again">ลองอีกครั้ง</string>

    <string name="text_warning">** การเข้าสู่ระบบจากแอพพลิเคชั่นนี้\nจะไม่ส่งผลให้ใช้งานแอพพลิเคชั่น TSR Sale Systems - Direct Sale ได้</string>
    <string name="open_tsr_mobile">ไปยังแอพฯ TSR Sale Systems - Direct Sale</string>

    /**
    * Address form hint
    **/
    <string name="hint_count_no">เลขที่สัญญา</string>
    <string name="hint_customer_name">ชื่อลูกค้า</string>
    <string name="hint_number">บ้านเลขที่</string>
    <string name="hint_moo">หมู่ที่</string>
    <string name="hint_soi">ตรอก/ซอย</string>
    <string name="hint_road">ถนน</string>
    <string name="hint_village">หมู่บ้าน</string>
    <string name="hint_building">อาคาร</string>
    <string name="hint_province">จังหวัด</string>
    <string name="hint_district">อำเภอ/เขต</string>
    <string name="hint_sub_district">ตำบล/แขวง</string>
    <string name="hint_zipcode">รหัสไปรษณีย์</string>
    <string name="hint_phone">เบอร์บ้าน</string>
    <string name="hint_work_phone">เบอร์โทรที่ทำงาน</string>
    <string name="hint_mobile">มือถือ/ที่ติดต่อได้</string>
    <string name="hint_email">อีเมล</string>
    <string name="hint_has_product">มีเครื่อง</string>
    <string name="hint_no_product">ไม่มีเครื่อง</string>

    //ขอทราบวิธีดำเนินการ
    <string name="hint_check_condition">ขอทราบวิธีดำเนินการ</string>

    <string name="hint_condition_1">เก็บเงิน</string>
    <string name="hint_condition_2">ถอดเครื่อง</string>
    <string name="hint_condition_3">ขายเครื่องใหม่</string>
    <string name="hint_condition_4">อื่นๆ</string>
    /****/

    //เก็บเงิน หรือ ถอดเครื่อง กรณีมีเครื่อง

    /*
    * Spinner hint
    **/
    <string name="spinner_province">กรุณาเลือกจังหวัด</string>
    <string name="spinner_district">กรุณาเลือกเขต/อำเภอ</string>
    <string name="spinner_sub_district">กรุณาเลือกแขวง/ตำบล</string>
    /****/

    /**
    * GPS String
    **/
    <string name="GPSAlertDialogMessage">ไม่ได้เปิดการใช้งาน GPS. กรุณา ตั้งค่า เพื่อเปิดการใช้งาน GPS</string>
    /****/
</resources>
