<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustPan|adjustResize"
    android:background="@color/colorPrimaryDark"
    tools:context="th.co.thiensurat.tsr_history.full_authen.FullAuthenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="14dp"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/logo"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/Red"
                android:text="@string/text_warning"
                android:textSize="14sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel_white">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/authen_username"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:inputType="text|textNoSuggestions|textCapCharacters"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel_white">

                <EditText
                    android:id="@+id/user_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:hint="@string/authen_password"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login_tsr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:text="@string/dialog_button_login_tsr"
                    android:textColor="@color/White"
                    android:layout_margin="2dp"/>

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/White"
                    android:text="@string/dialog_button_login"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="2dp"/>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>

    </RelativeLayout>

    <!--<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textCopy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="Copyright &#169; 2017 by THIENSURAT CO.,LTD"
                android:textColor="@color/White"/>

            <TextView
                android:id="@+id/textVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="2dp"
                android:text="version"
                android:textColor="@color/White"/>

        </LinearLayout>

    </RelativeLayout>-->

</RelativeLayout>
