<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="adjustPan|adjustResize"
    android:background="@color/colorPrimaryDark"
    tools:context="th.co.thiensurat.tsr_history.tsr_full_authen.TsrAuthenActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="14dp"
        android:layout_margin="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:src="@drawable/logo"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel_white">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/authen_username"
                    android:textColor="@color/White"
                    android:textSize="20sp"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:singleLine="true"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextLabel_white">

                <EditText
                    android:id="@+id/user_pwd"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:hint="@string/authen_password"
                    android:textSize="20sp"
                    android:textColor="@color/White"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/White"
                    android:text="@string/dialog_button_login"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
